--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -3,12 +3,18 @@
     <title>To Do List</title>
 </head>
 <body>
-    {% for category in categories %}
     <h1>{{ category.getName }}</h1>
-    {% endfor %}
 
+    {% if tasks is not empty %}
+        <p>Here are the tasks:</p>
+        <ul>
+            {% for task in tasks %}
+                <li>{{ task.getDescription }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
-  
+    <h4>Add a task</h4>
 
     <form action='/tasks' method='post'>
         <input id="category_id" name="category_id" type="hidden" value="{{ category.getId() }}">
