add due_date functionality to entire app

--- a/views/delete_categories.html.twig
+++ b/views/delete_categories.html.twig
@@ -3,7 +3,7 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>Tasks cleared! (category remains intact)</h1>
+    <h1>Categories cleared!</h1>
     <p><a href='/'>Home</a></p>
 </body>
 </html>
