--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -9,7 +9,8 @@
         <p>Here are the tasks:</p>
         <ul>
             {% for task in tasks %}
-                <li>{{ task.getDescription }}</li>
+                <li>Task: {{ task.getDescription }}</li>
+                <li>Due date: {{ task.getDue_date }}</li><br>
             {% endfor %}
         </ul>
     {% endif %}
@@ -18,11 +19,17 @@
 
     <form action='/tasks' method='post'>
         <input id="category_id" name="category_id" type="hidden" value="{{ category.getId() }}">
-        <label for='description'>Task Description</label>
-        <input id='description' name='description' type='text'>
+        <label for='description'>Task Description:</label><br>
+        <input id='description' name='description' type='text'><br><br>
+        <label for='due_date'>Task Due Date:</label><br>
+        <input id='due_date' name='due_date' type='date'>
 
         <button type='submit'>Add task</button>
     </form>
+
+      <form action='/delete_tasks' method='post'>
+          <button type='submit'>Clear</button>
+      </form>
 
     <p><a href='/'>Home</a></p>
 </body>
